# Parch

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  parchy.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  question.md
.github/workflows/: ci-cd.yml  dependabot.yml  release.yml
docs/: INSTALLATION.md  PLATFORM_SUPPORT.md  installation.md  platform-support.md  usage.md
src/: api.rs  cli.rs  download.rs  local.rs  main.rs  paths.rs  spinner.rs  wallpaper.rs
