[package]
name = "parch"
version = "0.6.5"
edition = "2024"
authors = ["signalbean"]
description = "CLI tool to fetch and apply wallpapers from Konachan"
license = "MIT OR Apache-2.0"
repository = "https://github.com/signalbean/Parch"
readme = "README.md"
keywords = ["wallpaper", "image", "customization", "cli"]

[[bin]]
name = "parch"

[dependencies]
ureq = { version = "3.1.2", default-features = false, features = ["rustls"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "shellapi", "errhandlingapi"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
incremental = true
